# CommonAssessmentTool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  initialize_data.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py  models.py
app/auth/: router.py  schemas.py  security.py  services.py
app/clients/: router.py
app/clients/service/: client_service.py
app/modelmgmt/: dummy_model.py  model_list.py  router.py
tests/: conftest.py
venv-py311/: pyvenv.cfg
